syntax = "proto3";

package connection_manager;

service ConnectionManager {
    rpc RequestConnection (ConnectRequest) returns (ConnectResponse);
    rpc Listen (ConnectRequest) returns (ConnectResponse);
}

message ConnectRequest {
    uint32 client_id = 1;
    uint32 qp_idx = 2;
}

message ConnectResponse {
    uint32 server_port = 1;
}

message ClientCommand {
    oneof command {
        ConnectRequest connect_request = 1;
    }
}

message ServerReply {
    oneof reply {
        ConnectResponse connect_response = 1;
    }
}